<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="shm.dim.lab_15.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/task_1"
                style="@style/button"
                android:text="@string/task_1" />

            <Button
                android:id="@+id/task_2"
                style="@style/button"
                android:text="@string/task_2" />

            <Button
                android:id="@+id/task_3"
                style="@style/button"
                android:text="@string/task_3" />

            <Button
                android:id="@+id/task_4"
                style="@style/button"
                android:text="@string/task_4" />

            <Button
                android:id="@+id/task_5"
                style="@style/button"
                android:text="@string/task_5" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>