<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="shm.dim.lab_15.GroupComparisonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/text_view"
            android:textAlignment="center"
            android:text="@string/task_3"
            android:layout_marginBottom="20dp"/>

        <TextView
            style="@style/text_view"
            android:textAlignment="center"
            android:text="@string/enter_period" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/date_with"
                    style="@style/edit_text"
                    android:inputType="date"
                    android:hint="@string/yyyy_mm_dd" />

                <EditText
                    android:id="@+id/date_on"
                    style="@style/edit_text"
                    android:inputType="date"
                    android:hint="@string/yyyy_mm_dd" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" >

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:text="@string/сompare_by_subject" />

                <Spinner
                    android:id="@+id/subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/button_select"
            style="@style/button"
            android:text="@string/select" />

        <GridView
            android:id="@+id/result"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
        </GridView>

    </LinearLayout>

</RelativeLayout>